--- a/pom.xml
+++ b/pom.xml
@@ -7,10 +7,13 @@
 	<version>3.0.0-SNAPSHOT</version>
 	<name>simple-app</name>
 	<url>http://maven.apache.org</url>
-	
-	<dependencies>
 
-		
+	<dependencies>
+		<properties>
+    <maven.compiler.source>1.6</maven.compiler.source>
+    <maven.compiler.target>1.6</maven.compiler.target>
+  </properties>
+
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -19,5 +22,11 @@
 		</dependency>
 
 	</dependencies>
-	
+
+	<properties>
+    <maven.compiler.source>1.6</maven.compiler.source>
+    <maven.compiler.target>1.6</maven.compiler.target>
+  </properties>
+
 </project>
+https://maven.apache.org/pom/maven/
